<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vegetables_Splash_Logo">Vegetables</string>
    <string name="Foodie_Title">Foodie</string>
    <string name="Splash_Button">Start</string>
    <string name="my_profile_drawer">My Profile</string>
    <string name="sign_out_drawer">Sign out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signIn">Sign In</string>
    <string name="FirstNameSignUp">first name</string>
    <string name="LastNameSignUp">last name</string>
    <string name="addPostContentDescription">Add New Post</string>
    <string name="cardImageDescription">Card Image</string>
    //Add PostLayout
    <string name="addImageContentDescription">Add Image</string>
    <string name="addPostTitleHint">Add Title</string>
    <string name="addPostDescriptionHint">Add Description</string>
    <string name="addPostBtn">Add</string>
</resources>