<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="android.view.View"/>
        <variable
            name="postViewModel"
            type="de.abou.foodie.screens.post.PostViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/postView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".screens.post.PostFragment">

<!--        <fragment-->
<!--            android:id="@+id/autocomplete_fragment"-->
<!--            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/addPostImageBtn"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <androidx.cardview.widget.CardView
            android:id="@+id/addPostImageBtnCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/addPostImageBtn"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/ic_add_photo_post_70"
                android:clickable="true"
                android:contentDescription="@string/addImageContentDescription" />
        </androidx.cardview.widget.CardView>


        <EditText
           android:id="@+id/addPostTitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/addPostTitleStart"
           android:layout_marginTop="@dimen/addPostTitleToImage"
           android:layout_marginEnd="@dimen/addPostTitleEnd"
           android:hint="@string/addPostTitleHint"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/addPostImageBtnCard"
           android:text="@={postViewModel.titleLiveData}"
           android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/addPostDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/addPostMarginStartAndEnd"
            android:layout_marginTop="@dimen/addPostDescriptionToTitle"
            android:layout_marginEnd="@dimen/addPostMarginStartAndEnd"
            android:hint="@string/addPostDescriptionHint"
            android:inputType="text"
            android:text="@={postViewModel.descriptionLiveData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPostTitle"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/addPostPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Price"
            android:inputType="number"
            android:text="@={postViewModel.priceLiveData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPostDescription"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <Button
            android:id="@+id/addPostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@android:color/background_dark"
            android:clickable="true"
            android:onClick="@{()->postViewModel.onAddPost(addPostImageBtn)}"
            android:text="@string/addPostBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>