<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signInViewModel"
            type="de.abou.foodie.screens.regestration.signIn.SignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signInFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".model.LoginFragment">


            <androidx.cardview.widget.CardView
                android:id="@+id/app_logo_card"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/main_background"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/app_logo"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/sign_in_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo_card"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/signInEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/originalMerge"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/originalMerge"
                        android:layout_marginBottom="16dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:text="@={signInViewModel.email}"
                        app:layout_constraintBottom_toTopOf="@+id/signInPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/textInFields"/>

                    <EditText
                        android:id="@+id/signInPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/originalMerge"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/originalMerge"
                        android:layout_marginBottom="16dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={signInViewModel.password}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/signInEmail"
                        style="@style/textInFields"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/signInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/signInMerge"
                android:layout_marginTop="@dimen/signInMerge"
                android:layout_marginEnd="@dimen/signInMerge"
                android:background="#009688"
                android:onClick="@{() -> signInViewModel.onSignIn()}"
                android:text="@string/signIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
